--- a/debugging-2/100/index.html
+++ b/debugging-2/100/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Debugging in JavaScript 100</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script app="app.js"></script>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="container">
