--- a/debugging-2/200/index.html
+++ b/debugging-2/200/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Debugging in JavaScript 200</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <scripts app="app.js"></scripts>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="container">
@@ -22,7 +21,7 @@
         </form>
       </div>
     </div>
-    <scripts src="app.js"></scripts>
+    <script src="app.js"></script>
   </body>
 </html>
 
