--- a/debugging-2/300/index.html
+++ b/debugging-2/300/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Debugging in JavaScript 300</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script app="app.js"></script>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="container">
@@ -12,7 +12,7 @@
           <h2>Register with Us</h2>
           <div class="form-control">
             <label>Username</label>
-            <input type="text" id="usernam" placeholder="Enter username" />
+            <input type="text" id="username" placeholder="Enter username" />
           </div>
           <div class="form-control">
             <label>Email</label>
