--- a/devtools/index.html
+++ b/devtools/index.html
@@ -70,26 +70,31 @@
             >The script</a
           >
         </li>
-        <li><a href="chat.openai.com/auth/login">Sign up for ChatGPT</a></li>
+        <li>
+          <a href="https://chat.openai.com/auth/login">Sign up for ChatGPT</a>
+        </li>
       </ul>
     </nav>
     <main tabindex="0" id="main">
       <h2>🕵️ Dev Tools Workshop</h2>
-      <ul class="card-list">
-        <li class="card">
-          <a href="https://fonts.google.com/knowledge">
+      <ul class="deck">
+        <li>
+          <a class="card" href="https://fonts.google.com/knowledge">
             <h3>Fonts</h3>
             <span class="emoji">📰</span>
           </a>
         </li>
-        <li class="card">
-          <a href="https://color.adobe.com/create/color-wheel">
+        <li>
+          <a class="card" href="https://color.adobe.com/create/color-wheel">
             <h3>Colours</h3>
             <span class="emoji">🎨</span>
           </a>
         </li>
-        <li class="card">
-          <a href="https://uxdesign.cc/whitespace-in-ui-design-44e332c8e4a">
+        <li>
+          <a
+            class="card"
+            href="https://uxdesign.cc/whitespace-in-ui-design-44e332c8e4a"
+          >
             <h3>Spaces</h3>
             <span class="emoji">📐</span>
           </a>
