add in links to deployed site now it's up

--- a/devtools/index.html
+++ b/devtools/index.html
@@ -14,7 +14,7 @@
     <header>
       <h1>
         <a
-          href="https://github.com/CodeYourFuture/CYF-Workshops/tree/main/devtools-day-1/readme.md"
+          href="https://github.com/CodeYourFuture/CYF-Workshops/tree/main/devtools-day-1"
         >
           <span class="is-invisible">Code Your Future</span>
           <svg
