stubbing out draft
I have this written up in a notebook so will transfer it tomorrowish

--- a/asking-questions/index.html
+++ b/asking-questions/index.html
@@ -17,10 +17,9 @@
         <li>Test your prediction</li>
         <li>Update your model</li>
       </ol>
-
       <details>
         <summary><h3>Question Bank</h3></summary>
-
+        <p>Use Devtools and look at the code to help you.</p>
         <ul id="questions" class="questions">
           <li id="important" class="question">
             <p>
