--- a/asking-questions/index.html
+++ b/asking-questions/index.html
@@ -23,7 +23,7 @@
         <li>Test your prediction</li>
         <li>Update your model</li>
       </ol>
-      <h3>🎩 A formal language</h3>
+      <h3>🎩 Our formal language</h3>
       <ol>
         <li>What I <strong>did</strong></li>
         <li>What I <strong>expected</strong></li>
@@ -69,7 +69,7 @@
         <ul id="problems" class="problems">
           <li id="important" class="problem">
             <p>
-              If you add the rule <code>!important</code> to line 9 of
+              If you add the rule <code>!important</code> to line 8 of
               styles.css, what colour will this text be? Why?
             </p>
           </li>
