add the validator link
I tried the vscode extension but it needs setup

--- a/asking-questions/index.html
+++ b/asking-questions/index.html
@@ -93,7 +93,8 @@
           <li id="grid" class="problem">
             <p>
               Before running Lighthouse, write down the errors it will give you
-              on this page.
+              on this page. Now
+              <a href="https://validator.w3.org/">validate the HTML</a>.
             </p>
           </li>
           <li id="hundred" class="problem">
