Copy edits on asking questions workshop

--- a/asking-questions/index.html
+++ b/asking-questions/index.html
@@ -49,7 +49,7 @@
         expose common, wrong, mental models of HTML and CSS. These are
         simplified versions of problems that CYF trainees get stuck on for hours
         (or days) in coursework. Instead of getting frustrated and stuck on your
-        own_, let's encounter these collectively and <em>use</em> these blockers
+        own, let's encounter these collectively and <em>use</em> these blockers
         to develop our skills in:
       </p>
       <ul>
@@ -63,7 +63,7 @@
         frustrated and quitting coding...or any of the other totally normal,
         human responses we naturally have to being confounded.
       </p>
-      <details>
+      <details id="problem-bank">
         <summary><h3>Problem Bank</h3></summary>
         <p>Use Devtools and look at the code to help you.</p>
         <ul id="problems" class="problems">
