change documentation to docs
so people know it's all the same

--- a/components-1/card.html
+++ b/components-1/card.html
@@ -63,7 +63,7 @@
         <li>
           <a
             href="card.html"
-            >Card documentation</a
+            >Card docs</a
           >
         </li>
         <li>
