workshop instructions and examples

--- a/components-1/teams.html
+++ b/components-1/teams.html
@@ -58,17 +58,17 @@
           <a href="teams.html">Team Generator</a>
         </li>
         <li>
-          <a href="card.html">Card docs</a>
+          <a href="docs/card/">Card docs</a>
         </li>
         <li>
-          <a href="header.html">Header docs</a>
+          <a href="docs/header">Header docs</a>
         </li>
         <li>
-          <a href="footer.html">Footer docs</a>
+          <a href="docs/footer">Footer docs</a>
         </li>
       </ul>
     </nav>
-    <main tabindex="0" id="main">
+    <main tabindex="0" id="main" class="main">
       <team-randomiser></team-randomiser>
     </main>
     <footer class="footer">
