--- a/components-1/index.html
+++ b/components-1/index.html
@@ -92,7 +92,7 @@
         </li>
       </ul>
       <section class="main__copy">
-        <readme-component></readme-component>
+        <readme-component path="components-1/readme"></readme-component>
       </section>
     </main>
     <footer class="footer">
