--- a/components-1/together.html
+++ b/components-1/together.html
@@ -23,22 +23,22 @@
           <a href="teams.html">Team Generator</a>
         </li>
         <li>
-          <a href="card.html">Card docs</a>
+          <a href="docs/card/">Card docs</a>
         </li>
         <li>
-          <a href="header.html">Header docs</a>
+          <a href="docs/header">Header docs</a>
         </li>
         <li>
-          <a href="footer.html">Footer docs</a>
+          <a href="docs/footer/">Footer docs</a>
         </li>
       </ul>
     </nav>
-    <main tabindex="0" id="main">
-      <ul class="deck">
+    <main tabindex="0" id="main" class="main">
+      <section class="main__deck">
         <!--=======================
-             PUT THREE CARDS IN LIST ITEMS HERE 
+             PUT THREE CARDS IN HERE 
              =======================-->
-      </ul>
+      </section>
     </main>
     <!--=======================
         THE FOOTER COMPONENT GOES HERE
