--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -29,6 +29,11 @@
 
       <label for="s">
         <input type="radio" name="s" id="sort" />
+       Updated
+      </label>
+
+      <label for="s">
+        <input type="radio" name="s" id="sort" />
         Fork </label>
         <label for="s">
         <input type="radio" name="s" id="sort" />
@@ -37,7 +42,7 @@
 
       <select name="o" id="order">
         <option value="asce">Ascending</option>
-        <option value="desc">Ascending</option>
+        <option value="desc">Descending </option>
       </select>
 
       <input type="submit" value="Submit" />
