--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -16,15 +16,15 @@
     <input type="search" name="q"id="search">
     <select name="a" id="a">
       <option value="repository">Repository</option>
-      <option value="coding">Coding</option></select>
+      <option value="coding">Code</option></select>
       <label for="s">
-        <input type="radio" name="s"id="sort">Fork
-        <input type="radio" name="s" id="sort">Stsr
-        <input type="radio" name="s" id="sort">Fork
+        <input type="radio" name="s"id="sort">STAR
+        <input type="radio" name="s" id="fork">Fork
+        <input type="radio" name="s" id="update">Update
       </label>
       <select name="o"id="order">
-        <option value="asen">Acsending</option>
-        <option value="dsen">Acsending</option>
+        <option value="ascen">Ascending</option>
+        <option value="dscen">Descending</option>
       </select>
       <input type="submit"value="Submit">
     
