--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="My Github Search form" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
-    <form action="https://github.com/search" method="get"></form>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Form</title>
+  <meta name="description" content="My Github Search form" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link rel="stylesheet" href="style.css" />
+
+  
+</head>
+
+<body>
+  <form action="https://github.com/search" method="get">
+    <h2>Github Repositories Search</h2>
+
+    <section id="search-field">
+      <div>
+        <label for="search-bar">Search repositories on Github</label>
+        <input type="search" id="search-bar" name="q">
+        <input type="hidden" name="type" value="repositories">
+      </div>
+      <button>Search</button>
+    </section>
+    <section>
+      <label for="sorting-list">Sorting by</label>
+      <select name="s" id="sorting-list">
+        <option value="starts" class="sorting-item">Stars</option>
+        <option value="forks" class="sorting-item">Forks</option>
+        <option value="updated" class="sorting-item">Updated</option>
+      </select>
+      <fieldset>
+        <legend>Sort order</legend>
+        <div><input type="radio" name="o" id="ascending" value="asc">
+          <label for="ascending">Ascending</label>
+        </div>
+        <div>
+          <input type="radio" name="o" id="descending" value="desc">
+          <label for="descending">Descending</label>
+        </div>
+      </fieldset>
+    </section>
+  </form>
+</body>
+
 </html>
