--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <meta name="description" content="My Github Search form" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Search Github</title>
   </head>
 
   <body>
@@ -17,8 +18,8 @@
 
       <h2>Choose an option</h2>
       <select name="o">
-        <option value="Stars">ascending</option>
-        <option value="Forks">descending</option>
+        <option value="ascending">ascending</option>
+        <option value="descending">descending</option>
       </select>
       <br />
       <br />
