--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>GitHub Search Form</title>
     <meta name="description" content="My Github Search form" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -11,22 +11,22 @@
     <form action="https://github.com/search" method="get">
       <div>
         <label for="search">Search GitHub</label>
-        <input type="text" name="q"/>
+        <input type="text" name="q" id="search"/>
         <button type="submit">Search</button>
       </div>
       <div>
         <label for="sort">Sort by</label>
-        <select name="s">
+        <select name="s" id="sort">
           <option value="stars">Stars</option>
           <option value="fork">Fork</option>
           <option value="updated">Updated</option>
         </select>
       </div>
       <div>
-        <label for="ascending">Ascending</label>
-        <input type="radio" name="o" value="asc"/>
-        <label for="descending">Descending</label>
-        <input type="radio" name="o" value="dsc"/>
+        <label for="order1">Ascending</label>
+        <input type="radio" name="o" value="asc" id="order1"/>
+        <label for="order2">Descending</label>
+        <input type="radio" name="o" value="dsc" id="order2"/>
       </div>
     </form>
   </body>
