--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="My Github Search form" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
-    <form action="https://github.com/search" method="get"></form>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Form</title>
+  <meta name="description" content="My Github Search form" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+
+<body>
+  <form action="https://github.com/search" method="get">
+    <label for="site-search">Type your search:</label>
+    <input type="search" id="site-search" name="q" />
+
+    <label for="sort-by-type">Sort by type:</label>
+    <select name="s" id="sort-by-type">
+      <option value="">Type</option>
+      <option value="stars">Stars</option>
+      <option value="forks">Forks</option>
+      <option value="last updated">Last updated</option>
+    </select>
+
+    <label for="sort-by-order">Sort by order:</label>
+    <select name="o" id="sort-by-order">
+      <option value="">Order</option>
+      <option value="asc">Ascending</option>
+      <option value="desc">Descending</option>
+    </select>
+
+
+
+    <button>Search</button>
+
+
+
+
+
+
+
+  </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+
 </html>
