--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -3,11 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>CYF-Form</title>
     <meta name="description" content="My Github Search form" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <form action="https://github.com/search" method="get"></form>
+    <form action="https://github.com/search" method="get">
+      <label for="searchQuery">Search on GitHub:</label>
+      <input type="text" id="searchQuery" name="q" placeholder="Enter your search query">
+      
+      <div for="sortBy">Sort By:</div>
+        <select id="sortBy" name="s">
+            <option value="stars">Stars</option>
+            <option value="forks">Forks</option>
+            <option value="updated">Last Updated</option>
+        </select>
+
+        <label for="sortOrder">Sort Order:</label>
+        <select id="sortOrder" name="o">
+            <option value="asc">Ascending</option>
+            <option value="desc">Descending</option>
+        </select>
+
+        <div><input type="submit" value="Search"></div>
+    </form>
   </body>
 </html>
