--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Get form</title>
     <meta name="description" content="My Github Search form" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -18,7 +18,7 @@
 
         <div>
           <label for="s">Sorting Results </label>
-          <select id="s" name="s">
+          <select id="sort" name="s">
             <option value="" disabled selected>Select ...</option>
             <option value="stars">Stars</option>
             <option value="forks">Forks</option>
@@ -35,7 +35,6 @@
           </select>
         </div>
         <br />
-
         <button>Search</button>
         <br />
       </form>
