--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -9,25 +9,25 @@
   </head>
   <body>
     <form action="https://github.com/search" method="get">
-    <label for="site-search">Search the site:</label>
-    <input type="search" id="site-search" name="q" />
-    </label>
-    <label>
-    <select name="s" id="sort-by-type">
-      <option value="">Select Type</option>
-      <option value="stars">Stars</option>
-      <option value="forks">Forks</option>
-      <option value="last updated">Last updated</option>
-    </select>
-    </label>
-    <label>
-    <select name="o" id="sort-by-order">
-      <option value="">Select Order</option>
-      <option value="asc">Ascending</option>
-      <option value="desc">Descending</option>
-    </select> 
-    </label>
-   <button>Search</button>
+      <label for="site-search">Search the site:</label>
+      <input type="search" id="site-search" name="q" />
+
+      <label for="sort-by-type">sort-by-type:</label>
+      <select name="s" id="sort-by-type">
+        <option value="">Select Type</option>
+        <option value="stars">Stars</option>
+        <option value="forks">Forks</option>
+        <option value="last updated">Last updated</option>
+      </select>
+
+      <label for="sort-by-order"></label>
+      <select name="o" id="sort-by-order">
+        <option value="">Select Order</option>
+        <option value="asc">Ascending</option>
+        <option value="desc">Descending</option>
+      </select>
+
+      <button>Search</button>
     </form>
   </body>
 </html>
