required added to search input

--- a/get-forms/index.html
+++ b/get-forms/index.html
@@ -20,7 +20,7 @@
     <section id="search-field">
       <div>
         <label for="search-bar">Search repositories on Github</label>
-        <input type="search" id="search-bar" name="q">
+        <input type="search" id="search-bar" name="q" required>
         <input type="hidden" name="type" value="repositories">
       </div>
       <button>Search</button>
